[project]
name = "bot-tg-remont"
version = "0.1.0"
description = ""
authors = [
    {name = "Олег Степанов",email = "stepanov.2401@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.python]
version = "3.10.11"
